crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests____spaced_in_script_html_comment_double_escaped.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(\"<!--<script> - </script>-->\")"
---
[
    Token {
        data: "<script> - </script>",
        attrs: None,
        kind: Comment,
        is_implied: false,
    },
    Token {
        data: "",
        attrs: None,
        kind: CommentEnd,
        is_implied: false,
    },
]
